# Cachetest

./: Makefile.am  Makefile.in  README  README.md  config.h.in  config.h.in~  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0
scripts/: avg.awk  avg_diff.awk  cache_exp.sh  cpuconf.sh  docalc.sh  docalc_ibm.sh  docalc_intel.sh  experiment.config.sample  functions.sh  loadFramesDump.py  median.awk  missPlot.sh  multiple_plot.sh  perf_stat.py  plot.sh  plotPredicted.sh  plotting.sh  run.sh  stats.sh  systeminfo.sh  useful_bash.sh
src/: Buffer.cc  Distribution.cc  Large_buffer.cc  Makefile.am  Makefile.back  Makefile.in  Perf.cc  Perf_Cachetest.cc  Perf_PAPI.cc  README  Small_buffer.cc  cachetest.cc  genzipf.cc  launcher.cc
src/include/: Buffer.hpp  Distribution.h  Distribution.hpp  MersenneTwister.h  Options.hpp  Perf.hpp  Perf_Cachetest.h  Perf_Cachetest.hpp  Perf_PAPI.h  options.h  proto.h  zipf.h
src/kernel_modules/: Makefile.back  cache_toggle.c  prefetch_toggle_p7.c
src/util/: Makefile.am  Makefile.back  Makefile.in  compare.sh  hugepage-mmap.c  map_hugetlb.c  phys_dumper.c  rdmsr.c  wrmsr.c
